@@ -12,6 +12,8 @@ postgresql-common (200) UNRELEASED; urgency=medium
     Spotted by Jean-Christophe Arnu, merci!
   * get_cluster_port: Fall back to 5432 if port is not defined in config.
     (Closes: #920248)
+  * read_cluster_conf_file: Use cluster_data_directory instead of hardcoding
+    /var/lib/postgresql.
   * postgresql@.service: Add After=network.target to ensure the server is
     stopped before networking goes down on shutdown. Thanks Elrond!
     (Closes: #920248)
